tests/snapshots/fmt_records_optics__optic_read_path_inline.snap
---
source: tests/fmt_records_optics.rs
expression: "fmt(\"fn f(r : R) : Int = r.[players.each.hp]\\n\")"
---
fn f(r : R) : Int = r.[players.each.hp]
