tests/snapshots/fmt_records_optics__optic_single_clause_inline.snap
---
source: tests/fmt_records_optics.rs
expression: "fmt(\"fn f(r : R) : R = { r | x = 1 }\\n\")"
---
fn f(r : R) : R = { r | x = 1 }
