tests/snapshots/fmt_records_optics__record_over_four_fields.snap
---
source: tests/fmt_records_optics.rs
expression: "fmt(\"fn mk() : Config = Config { a = 1, b = 2, c = 3, d = 4, e = 5 }\\n\")"
---
fn mk() : Config =
  Config {
    a = 1,
    b = 2,
    c = 3,
    d = 4,
    e = 5
  }
