tests/snapshots/fmt_records_optics__record_small_stays_inline.snap
---
source: tests/fmt_records_optics.rs
expression: "fmt(\"fn mk() : Vec2 = Vec2 { x = 1, y = 2 }\\n\")"
---
fn mk() : Vec2 = Vec2 { x = 1, y = 2 }
